<resources>
    <string name="app_name">convert</string>

    <string name="home_text">What do you want to convert ?</string>

    /* theme   */
    <string name="currency">Currency</string>
    <string name="length">Length</string>
    <string name="mass">Mass</string>
    <string name="speed">Speed</string>
    <string name="temperature">Temperature</string>
    <string name="angle">Angle</string>
    <string name="time">Time</string>
    <string name="volume">Volume</string>
    <string name="energy">Energy</string>
/* -----*/
    <string name="unit_1">unit to convert</string>
    <string name="unit_2">unit converted</string>

    <string name="convert_btn">Convert !</string>
    <string name="des_btn" translatable="false">switch unit</string>

    <string name="blank" translatable="false">  </string>

/*angle */


    <string name="angular_mil">angular mil</string>
    <string name="radian">radian</string>
    <string name="degree">degree</string>
    <string name="turn">turn</string>
    <string name="gradian">gradian</string>

    <string name="smb_angular_mil" translatable="false">µ</string>
    <string name="smb_radian" translatable="false">rad</string>
    <string name="smb_degree" translatable="false">°</string>
    <string name="smb_turn" translatable="false">tr</string>
    <string name="smb_gradian" translatable="false">gr</string>



    <string-array name="angle_spinner">
        <item>angular mil</item>
        <item>radian</item>
        <item>degree</item>
        <item>turn</item>
        <item>gradian</item>
    </string-array>


    /*energy*/

    <string name="joule">joule</string>
    <string name="kilojoule">kilojoule</string>
    <string name="calorie">calorie</string>
    <string name="Kilocalorie">kilocalorie</string>
    <string name="watt_heure">watt-hour</string>
    <string name="kilowatt_heure">kilowatt-hour</string>
    <string name="electronvolt">Tera electronvolt</string>


    <string name="smb_joule" translatable="false">J</string>
    <string name="smb_kilojoule" translatable="false">kJ</string>
    <string name="smb_calorie" translatable="false">C</string>
    <string name="smb_Kilocalorie" translatable="false">kC</string>
    <string name="smb_watt_heure" translatable="false">w/h</string>
    <string name="smb_kilowatt_heure" translatable="false">kW/h</string>
    <string name="smb_electronvolt" translatable="false">TeV</string>



    <string-array name="ener_spinner">
        <item>joule</item>
        <item>kilojoule</item>
        <item>calorie</item>
        <item>kilocalorie</item>
        <item>watt-hour</item>
        <item>>kilowatt-hour</item>
        <item>Tera electronvolt</item>
    </string-array>


    /* LENGTH*/

    <string name="nanométre">nanometer</string>
    <string name="micrométre">micrometer</string>
    <string name="millimétre">millimeter</string>
    <string name="centimétre">centimeter</string>
    <string name="décimétre">decimeter</string>
    <string name="métre">meter</string>
    <string name="décamétre">decameter</string>
    <string name="hectométre">hectometer</string>
    <string name="kilométre">kilometer</string>
    <string name="miles">mile</string>
    <string name="yard">yard</string>
    <string name="pied">feet</string>
    <string name="pouce">inch</string>
    <string name="mile_marin">nautical mile</string>



    <string name="smb_nanométre" translatable="false">nm</string>
    <string name="smb_micrométre" translatable="false">µm</string>
    <string name="smb_millimétre" translatable="false">mm</string>
    <string name="smb_centimétre" translatable="false">cm</string>
    <string name="smb_décimétre" translatable="false">dm</string>
    <string name="smb_métre" translatable="false">m</string>
    <string name="smb_décamétre" translatable="false">dam</string>
    <string name="smb_hectométre" translatable="false">hm</string>
    <string name="smb_kilométre" translatable="false">km</string>
    <string name="smb_miles" translatable="false">mi</string>
    <string name="smb_yard" translatable="false">yd</string>
    <string name="smb_pied" translatable="false">\'</string>
    <string name="smb_pouce" translatable="false">"</string>
    <string name="smb_mile_marin" translatable="false">NM</string>



    <string-array name="length_spinner">
        <item>meter</item>
        <item>nanometer</item>
        <item>micrometer</item>
        <item>millimeter</item>
        <item>centimeter</item>
        <item>decimeter</item>
        <item>decameter</item>
        <item>hectometer</item>
        <item>kilometer</item>
        <item>mile</item>
        <item>yard</item>
        <item>feet</item>
        <item>inch</item>
        <item>nautical mile</item>
    </string-array>

/* TIME */


    <string name="minute">minute</string>
    <string name="heure">hour</string>
    <string name="jour">day</string>
    <string name="seconde">second</string>
    <string name="annee">year</string>
    <string name="miliseconde">millisecond</string>


    <string name="smb_minute" translatable="false">m</string>
    <string name="smb_heure" translatable="false">h</string>
    <string name="smb_jour" translatable="false">j</string>
    <string name="smb_seconde" translatable="false">s</string>
    <string name="smb_annee" translatable="false"> </string>
    <string name="smb_miliseconde" translatable="false">ms</string>



    <string-array name="time_spinner">
        <item>second</item>
        <item>minute</item>
        <item>hour</item>
        <item>day</item>
        <item>year</item>
        <item>millisecond</item>
    </string-array>

    /*VOLUME */

    <string name="litre">litre</string>
    <string name="once_liquide_uk">fluid once (uk)</string>
    <string name="once_liquide_usa">fluid once (usa)</string>
    <string name="pinte">pint</string>
    <string name="metre_cube">cubic meter</string>


    <string name="smb_litre" translatable="false">l</string>
    <string name="smb_once_liquide_uk" translatable="false">fl oz uk</string>
    <string name="smb_once_liquide_usa" translatable="false">fl oz usa</string>
    <string name="smb_pinte" translatable="false">pt</string>
    <string name="smb_metre_cube" translatable="false">m3</string>



    <string-array name="volume_spinner">
        <item>litre</item>
        <item>fluid once (uk)</item>
        <item>fluid once (usa)</item>
        <item>pint</item>
        <item>cubic meter</item>
    </string-array>

     /* MASS */



    <string name="tone">tonne</string>
    <string name="kilogramme">kilogramme</string>
    <string name="livre">pound</string>
    <string name="once">once</string>
    <string name="gramme">gramme</string>
    <string name="miligramme">milligramme</string>


    <string name="smb_tone" translatable="false">T</string>
    <string name="smb_kilogramme" translatable="false">kg</string>
    <string name="smb_livre" translatable="false">lb</string>
    <string name="smb_once" translatable="false">oz</string>
    <string name="smb_gramme" translatable="false">g</string>
    <string name="smb_miligramme" translatable="false">mg</string>



    <string-array name="mass_spinner">
        <item>kilogramme</item>
        <item>tonne</item>
        <item>pound</item>
        <item>once</item>
        <item>gramme</item>
        <item>milligramme</item>
    </string-array>




    /* TEMPERATURE */


    <string name="fahrenheit">fahrenheit</string>
    <string name="celsius">celsius</string>
    <string name="kelvin">kelvin</string>


    <string name="smb_fahrenheit" translatable="false">°F</string>
    <string name="smb_celsius" translatable="false">°C</string>
    <string name="smb_kelvin" translatable="false">°K</string>



    <string-array name="temp_spinner">
        <item>fahrenheit</item>
        <item>celsius</item>
        <item>kelvin</item>
    </string-array>

    /* SPEED */



    <string name="metre_seconde">meter per second</string>
    <string name="kilometre_heur">kilometer per hour</string>
    <string name="miles_heur">miles per hour</string>
    <string name="noeud">knot</string>


    <string name="smb_metre_seconde" translatable="false">m/s</string>
    <string name="smb_kilometre_heur" translatable="false">km/s</string>
    <string name="smb_miles_heur" translatable="false">mph</string>
    <string name="smb_noeud" translatable="false">nd</string>



    <string-array name="speed_spinner">
        <item>kilometer per hour</item>
        <item>meter per second</item>
        <item>miles per hour</item>
        <item>knot</item>
    </string-array>



</resources>