<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".convert_activities.Length">

    <Button
        android:id="@+id/conv_length_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/convert_btn"
        app:layout_constraintEnd_toEndOf="@+id/layout_u1"
        app:layout_constraintTop_toBottomOf="@+id/layout_u1" />

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="378dp"
        android:background="@color/orange_1"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/list_length">

        <Button
            android:id="@+id/home_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/home"
            android:text="@string/blank" />

        <Button
            android:id="@+id/time_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/temps"
            android:text="@string/blank" />

        <Button
            android:id="@+id/leng_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/lenght"
            android:text="@string/blank" />

        <Button
            android:id="@+id/mass_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/mass"
            android:text="@string/blank" />

        <Button
            android:id="@+id/speed_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/speed"
            android:text="@string/blank" />

        <Button
            android:id="@+id/temp_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/orange_1"
            android:foreground="@drawable/tempe"
            android:text="@string/blank" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_u1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/length_input"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:enabled="true"
            android:hint="@string/unit_1"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/length_spn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="71dp"
        android:text="@string/length"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_length"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_u1" />

</androidx.constraintlayout.widget.ConstraintLayout>